<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_order_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_order_no"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_pro_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_pro_name"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_plan_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_plan_num"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_order_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_order_date"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_complete_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_complete_num"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_customer"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="@string/txt_customer"
        android:textColor="#000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="88dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:textColor="#000"
        android:textSize="16sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            style="@style/Button.Select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>