<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_dot_circle"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_site"
            android:textColor="#000"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txt_site_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_dot_circle"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_pro_model"
            android:textColor="#000"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txt_order_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal"
        android:id="@+id/bad_cell">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_dot_circle"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_bad_type"
            android:textColor="#000"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/argSp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.5" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/contentSp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_dot_circle"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_num"
            android:textColor="#000"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_dot_circle"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_operator"
            android:textColor="#000"
            android:textSize="16sp" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txt_worker_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:gravity="center|end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/Button.Cancel" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            style="@style/Button.Submit" />
    </LinearLayout>

</LinearLayout>